--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "daisyui": "^2.42.1"
+        "daisyui": "^2.42.1",
+        "theme-change": "^2.2.0"
     }
 }
