--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/scout": "^9.5",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10"
     },
